Add a Criminal Input Model

--- a/BountyHunters.Web/Views/Criminal/Create.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model BountyHunters.Data.Models.Criminal
-
+﻿@using BountyHunters.Web.ViewModels.Criminal
+@model AddCriminalInputModel
 <h1>Create Criminal</h1>
 
 <form asp-action="Create">
