--- a/BountyHunters.Web/Views/Criminal/Index.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Index.cshtml
@@ -21,8 +21,8 @@
             <td>@criminal.Bounty</td>
             <td>@criminal.Status</td>
             <td>
-                <a asp-action="Edit" asp-route-id="@criminal.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@criminal.Id">Details</a> |
+                <a asp-action="Details" asp-route-id="@criminal.Id">Details</a>
+                <a asp-action="Edit" asp-route-id="@criminal.Id">Edit</a>
                 <a asp-action="Delete" asp-route-id="@criminal.Id">Delete</a>
             </td>
         </tr>
