--- a/BountyHunters.Web/Views/Shared/_Layout.cshtml
+++ b/BountyHunters.Web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Criminal" asp-action="Index">Criminals</a>
+                        </li>
                     </ul>
                 </div>
             </div>
