--- a/BountyHunters.Web/Views/Criminal/Create.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Create.cshtml
@@ -23,6 +23,7 @@
         <select asp-for="Status" class="form-control">
             <option>At Large</option>
             <option>Captured</option>
+            <option>Deceased</option>
         </select>
         <span asp-validation-for="Status" class="text-danger"></span>
     </div>
