Create Method in BoutntyHunters with Views

--- a/BountyHunters.Web/Views/Shared/_Layout.cshtml
+++ b/BountyHunters.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Criminal" asp-action="Index">Criminals</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BountyHunter" asp-action="Index">Bounty Hunters</a>
+                        </li>
                     </ul>
                 </div>
             </div>
