Editing the input models

--- a/BountyHunters.Web/Views/BountyHunter/Index.cshtml
+++ b/BountyHunters.Web/Views/BountyHunter/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<BountyHunters.Data.Models.BountyHunter>
+﻿@using BountyHunters.Web.ViewModels
+@model IEnumerable<BountyHunters.Web.ViewModels.BountyHunter.BountyHunterInputModel>
+
 
 <h1>Bounty Hunters</h1>
 
