--- a/BountyHunters.Web/Views/Criminal/Index.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<BountyHunters.Data.Models.Criminal>
+﻿@using BountyHunters.Web.ViewModels
+@model IEnumerable<BountyHunters.Web.ViewModels.Criminal.AddCriminalInputModel>
 
 <h1>Criminals</h1>
 
