--- a/BountyHunters.Web/Views/BountyHunter/Index.cshtml
+++ b/BountyHunters.Web/Views/BountyHunter/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BountyHunters.Web.ViewModels
+@using BountyHunters.Web.ViewModels.BountyHunter
 @model IEnumerable<BountyHunters.Web.ViewModels.BountyHunter.BountyHunterInputModel>
 
 
@@ -14,7 +15,7 @@
     </tr>
     </thead>
     <tbody>
-    @foreach (var hunter in Model)
+    @foreach (BountyHunterInputModel hunter in Model)
     {
         <tr>
             <td>@hunter.Name</td>
