--- a/BountyHunters.Web/Views/Criminal/Index.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BountyHunters.Web.ViewModels
+@using BountyHunters.Web.ViewModels.Criminal
 @model IEnumerable<BountyHunters.Web.ViewModels.Criminal.AddCriminalInputModel>
 
 <h1>Criminals</h1>
@@ -14,7 +15,7 @@
     </tr>
     </thead>
     <tbody>
-    @foreach (var criminal in Model)
+    @foreach (AddCriminalInputModel criminal in Model)
     {
         <tr>
             <td>@criminal.Name</td>
