--- a/BountyHunters.Web/Views/BountyHunter/Create.cshtml
+++ b/BountyHunters.Web/Views/BountyHunter/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model BountyHunters.Data.Models.BountyHunter
+﻿@model BountyHunters.Web.ViewModels.BountyHunter.AddBountyHunterModel
+
 
 <h1>Create Bounty Hunter</h1>
 
