Names on the tags

--- a/BountyHunters.Web/Views/BountyHunter/Create.cshtml
+++ b/BountyHunters.Web/Views/BountyHunter/Create.cshtml
@@ -1,6 +1,8 @@
 ﻿@model BountyHunters.Web.ViewModels.BountyHunter.AddBountyHunterModel
 
-
+@{
+    ViewData["Title"] = "Add Bounty Hunter";
+}
 <h1>Create Bounty Hunter</h1>
 
 <form asp-action="Create" method="post">
