--- a/BountyHunters.Web/Views/BountyHunter/Details.cshtml
+++ b/BountyHunters.Web/Views/BountyHunter/Details.cshtml
@@ -1,5 +1,7 @@
 ﻿@model BountyHunters.Data.Models.BountyHunter
-
+@{
+    ViewData["Title"] = "Bounty Hunter Details";
+}
 <h1>@Model.Name</h1>
 
 <div class="card">
