--- a/BountyHunters.Web/Views/BountyHunter/Index.cshtml
+++ b/BountyHunters.Web/Views/BountyHunter/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@using BountyHunters.Web.ViewModels
 @using BountyHunters.Web.ViewModels.BountyHunter
 @model IEnumerable<BountyHunters.Web.ViewModels.BountyHunter.BountyHunterInputModel>
-
+@{
+    ViewData["Title"] = "Bounty Hunters";
+}
 
 <h1>Bounty Hunters</h1>
 
