--- a/BountyHunters.Web/Views/Criminal/Create.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Create.cshtml
@@ -1,5 +1,8 @@
 ﻿@using BountyHunters.Web.ViewModels.Criminal
 @model AddCriminalInputModel
+@{
+    ViewData["Title"] = "Add a criminal";
+}
 <h1>Create Criminal</h1>
 
 <form asp-action="Create">
