--- a/BountyHunters.Web/Views/Criminal/Index.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@using BountyHunters.Web.ViewModels
 @using BountyHunters.Web.ViewModels.Criminal
 @model IEnumerable<BountyHunters.Web.ViewModels.Criminal.AddCriminalInputModel>
+@{
+    ViewData["Title"] = "Criminals";
+}
 
 <h1>Criminals</h1>
 
