--- a/BountyHunters.Web/Views/BountyHunter/UpdateProfile.cshtml
+++ b/BountyHunters.Web/Views/BountyHunter/UpdateProfile.cshtml
@@ -1,4 +1,7 @@
 ﻿@model BountyHunters.Data.Models.BountyHunter
+@{
+    ViewData["Title"] = "Update a bounty hunter";
+}
 
 <h1>Update Profile</h1>
 
