--- a/BountyHunters.Web/Views/Criminal/Create.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Create.cshtml
@@ -34,5 +34,7 @@
         <input asp-for="CaptureDate" class="form-control" type="date" />
         <span asp-validation-for="CaptureDate" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-success">Create</button>
 </form>
+
+<a asp-action="Index" class="btn btn-secondary">Cancel</a>
