--- a/BountyHunters.Web/Views/BountyHunter/Create.cshtml
+++ b/BountyHunters.Web/Views/BountyHunter/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model BountyHunters.Web.ViewModels.BountyHunter.AddBountyHunterModel
+﻿@using BountyHunters.Web.ViewModels.BountyHunter
+@model AddBountyHunterModel
 
 @{
     ViewData["Title"] = "Add Bounty Hunter";
