Change in the Create method

--- a/BountyHunters.Web/Views/Criminal/Create.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Create.cshtml
@@ -5,7 +5,8 @@
 }
 <h1>Create Criminal</h1>
 
-<form asp-action="Create">
+<form asp-action="Create" method="post">
+
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
