Post Method Achievements

--- a/BountyHunters.Web/Views/Achievement/Index.cshtml
+++ b/BountyHunters.Web/Views/Achievement/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<BountyHunters.Web.ViewModels.Achievement.AchievementViewModel>
+﻿@using BountyHunters.Web.ViewModels.Achievement
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model IEnumerable<BountyHunters.Web.ViewModels.Achievement>
 
 @{
     ViewData["Title"] = "Achievements";
