--- a/BountyHunters.Web/Views/Criminal/Index.cshtml
+++ b/BountyHunters.Web/Views/Criminal/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using BountyHunters.Web.ViewModels
-@using BountyHunters.Web.ViewModels.Criminal
+﻿@using BountyHunters.Web.ViewModels.Criminal
 @model IEnumerable<CriminalInputModel>
 @{
     ViewData["Title"] = "Criminals";
