--- a/BountyHunters.Web/Views/Shared/_Layout.cshtml
+++ b/BountyHunters.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BountyHunter" asp-action="Index">Bounty Hunters</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Achievements" asp-action="Index">Achievements</a>
+                        </li>
                     </ul>
                 </div>
             </div>
