Adjusting errors in usings

--- a/BountyHunters.Web/Views/Achievement/Index.cshtml
+++ b/BountyHunters.Web/Views/Achievement/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using BountyHunters.Web.ViewModels.Achievement
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model IEnumerable<BountyHunters.Web.ViewModels.Achievement>
+@model IEnumerable<AchievementViewModel>
 
 @{
     ViewData["Title"] = "Achievements";
