--- a/BountyHunters.Web/Views/Shared/_Layout.cshtml
+++ b/BountyHunters.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="BountyHunter" asp-action="Index">Bounty Hunters</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Achievements" asp-action="Index">Achievements</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Achievement" asp-action="Index">Achievements</a>
                         </li>
                     </ul>
                 </div>
